--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu site Alura</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
 </head>
 <body>
 
     <div class="Caixa-principal">
-
         <h1>Você decide o futuro da IA</h1>
-        <div class="Caixa-perguntas"></div>
-        <div class="Caixa-alternativas"></div>
+        <div class="caixa-perguntas"></div>
+        <div class="caixa-alternativas"></div>
         <div class="caixa-resultado">
-            <p class="Texto-resultado"></p>
+            <p class="texto-resultado"></p>
         </div>
-
     </div>
 
 
